--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-server.port=8080
+#server.port=8080
 
 spring.datasource.url:jdbc:mysql://localhost/bookstore
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+server.port = 8443
+server.ssl.key-store = classpath:tomcat.keystore
+server.ssl.key-store-password = challengers
+server.ssl.key-password = challengers
